--- a/.github/workflows/dmv-check.yml
+++ b/.github/workflows/dmv-check.yml
@@ -26,4 +26,4 @@ jobs:
         pip install -r requirements.txt
     - name: Check Site
       run: |
-        python check.py -v https://www.dmv.ca.gov/portal/dmv/dmv/appointments {{ secrets.sender }} {{ secrets.password }} {{ secrets.recipients }}
+        python check.py -v https://www.dmv.ca.gov/portal/dmv/dmv/appointments {{ secrets.SENDER }} {{ secrets.PASSWORD }} {{ secrets.RECIPIENTS }}
