--- a/.github/workflows/dmv-check.yml
+++ b/.github/workflows/dmv-check.yml
@@ -33,8 +33,8 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "Github Action"
-        git add screenshots
-        git commit -m "Changes" || echo "No changes to commit"
+        git add screenshots, log.txt
+        git commit -m "Changes"
 
     - name: Push to Repo
       uses: ad-m/github-push-action@master
