--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ opencv-python==4.2.0.34
 Pillow==7.1.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
+pytz==2020.1
 PyWavelets==1.1.1
 scikit-image==0.17.2
 scipy==1.4.1
