--- a/.github/workflows/dmv-check.yml
+++ b/.github/workflows/dmv-check.yml
@@ -1,13 +1,13 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: Check DMV
 
 on:
   push:
     branches: [ master ]
   schedule:
-    - cron: '*/15 * * * *'
+    - cron: '*/30 * * * *'
 
 jobs:
   build:
