--- a/.github/workflows/dmv-check.yml
+++ b/.github/workflows/dmv-check.yml
@@ -33,7 +33,8 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "Github Action"
-        git add screenshots, log.txt
+        git add .\screenshots\
+        git add .\log.txt
         git commit -m "Changes"
 
     - name: Push to Repo
