--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
+certifi==2020.4.5.2
+chardet==3.0.4
 cycler==0.10.0
 decorator==4.4.2
-future==0.18.2
+idna==2.9
 imageio==2.8.0
 kiwisolver==1.2.0
 matplotlib==3.2.1
 networkx==2.4
-numpy==1.18.4
+numpy==1.18.5
 opencv-python==4.2.0.34
 Pillow==7.1.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 PyWavelets==1.1.1
+requests==2.23.0
 scikit-image==0.17.2
 scipy==1.4.1
 six==1.15.0
-tifffile==2020.5.25
-webscreenshot==2.91
+tifffile==2020.6.3
+urllib3==1.25.9
